--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.9",
     "express": "~4.16.1",
+    "html": "^1.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
