--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "@types/node": "^20.4.2",
     "ejs": "^3.1.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "html": "^1.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2": "^3.5.1"
+    "mysql2": "^3.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "keywords": []
 }
