--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "sequelize": "^6.32.1"
   },
   "keywords": []
 }
