--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.5.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1"
   },
   "keywords": []
 }
